// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal/> Component handle loading state renders modal with loading overlay correctly 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0);
    -moz-transform: rotate(0);
    -ms-transform: rotate(0);
    transform: rotate(0);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: rgba(19,19,19,0.85);
  z-index: 9;
}

.emotion-2 {
  position: fixed;
  z-index: 10;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFFFFF;
  border-radius: 0px;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),0px 1px 2px -1px rgba(0, 0, 0, 0.1);
}

@media only screen and (min-width: 600px) {
  .emotion-2 {
    min-width: 30%;
    height: auto;
    width: auto;
    -webkit-box-pack: normal;
    -ms-flex-pack: normal;
    -webkit-justify-content: normal;
    justify-content: normal;
  }
}

@media only screen and (min-width: 600px) and (max-width: 900px) {
  .emotion-2 {
    max-width: 80%;
  }
}

@media only screen and (min-width: 900px) and (max-width: 1800px) {
  .emotion-2 {
    max-width: 60%;
  }
}

@media only screen and (min-width: 1800px) {
  .emotion-2 {
    max-width: 50%;
  }
}

.emotion-4 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(250,250,250,0.8);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  width: 58px;
  height: 58px;
  border: 4px solid #FFFFFF;
  border-radius: 50%;
  border-top: 4px solid #00677F;
  -webkit-animation: animation-0 1s cubic-bezier(0.3, 0.1, 0.25, 0.65) 0s infinite normal none;
  animation: animation-0 1s cubic-bezier(0.3, 0.1, 0.25, 0.65) 0s infinite normal none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: inherit;
  padding: 24px;
  background-color: transparent;
  border-bottom: none;
  gap: 8px;
}

@media only screen and (min-width: 600px) {
  .emotion-10 {
    padding-top: 32px;
  }
}

.emotion-10 button {
  color: #454545;
}

.emotion-10 svg {
  cursor: pointer;
}

.emotion-14 {
  font-weight: 700;
  font-size: 1.25rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #292929;
}

@media only screen and (min-width:1024px) {
  .emotion-14 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

.emotion-16 {
  font-family: DTUI-icons-outlined;
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: #454545;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-18 {
  padding: 24px;
  overflow-y: auto;
}

@media only screen and (max-width: 600px) {
  .emotion-18 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

<div
  class="emotion-0 emotion-1"
  data-testid="modal-overlay"
  type="dark"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
        data-testid="spinner"
        style="margin: auto;"
      >
        <div
          class="emotion-8 emotion-9"
        />
      </div>
    </div>
    <div
      class="emotion-10 emotion-11"
      data-testid="modal-header"
    >
      <div
        class="emotion-6 emotion-7"
        style="justify-content: space-between; flex-direction: row;"
      >
        <h4
          class="emotion-14 emotion-15"
          color="content.dark"
          data-testid="typography"
        >
          Title
        </h4>
        <i
          class="emotion-16 emotion-17"
          color="#454545"
          data-testid="close-icon"
        >
          close
        </i>
      </div>
    </div>
    <div
      class="emotion-18 emotion-19"
    >
      Some text here
    </div>
  </div>
</div>
`;

exports[`<Modal/> Component handle modal actions renders modal correctly 1`] = `
.emotion-0 {
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: rgba(19,19,19,0.85);
  z-index: 9;
}

.emotion-2 {
  position: fixed;
  z-index: 10;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFFFFF;
  border-radius: 0px;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),0px 1px 2px -1px rgba(0, 0, 0, 0.1);
}

@media only screen and (min-width: 600px) {
  .emotion-2 {
    min-width: 30%;
    height: auto;
    width: auto;
    -webkit-box-pack: normal;
    -ms-flex-pack: normal;
    -webkit-justify-content: normal;
    justify-content: normal;
  }
}

@media only screen and (min-width: 600px) and (max-width: 900px) {
  .emotion-2 {
    max-width: 80%;
  }
}

@media only screen and (min-width: 900px) and (max-width: 1800px) {
  .emotion-2 {
    max-width: 60%;
  }
}

@media only screen and (min-width: 1800px) {
  .emotion-2 {
    max-width: 50%;
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: inherit;
  padding: 24px;
  background-color: transparent;
  border-bottom: none;
  gap: 8px;
}

@media only screen and (min-width: 600px) {
  .emotion-4 {
    padding-top: 32px;
  }
}

.emotion-4 button {
  color: #454545;
}

.emotion-4 svg {
  cursor: pointer;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  font-weight: 700;
  font-size: 1.25rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #292929;
}

@media only screen and (min-width:1024px) {
  .emotion-8 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

.emotion-10 {
  font-family: DTUI-icons-outlined;
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: #454545;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-12 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
}

.emotion-14 {
  padding: 24px;
  overflow-y: auto;
}

@media only screen and (max-width: 600px) {
  .emotion-14 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: end;
  justify-content: end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: inherit;
  background-color: transparent;
  border-top: none;
  gap: 12px;
  padding: 24px;
}

@media only screen and (max-width: 600px) {
  .emotion-16 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
  }
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  width: 100%;
  min-width: 80px;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border-color 0.2s ease-in-out;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 2px solid transparent;
  gap: 8px;
  border-radius: 0px;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  padding: 12px 24px;
  color: #636363;
  border-color: #636363;
  background-color: transparent;
}

.emotion-18:hover {
  color: #636363;
  border-color: #636363;
  background-color: #C1C1C1;
}

.emotion-18:active {
  color: #636363;
  border-color: #636363;
  background-color: #C1C1C1;
}

.emotion-18:disabled {
  cursor: not-allowed;
  color: #A3A3A3;
  border-color: #A3A3A3;
  background-color: transparent;
}

.emotion-18:focus-visible {
  outline: 3px solid #C1C1C1;
  outline-offset: 1px;
}

@media only screen and (min-width: 600px) {
  .emotion-18 {
    width: auto;
  }
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  width: 100%;
  min-width: 80px;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border-color 0.2s ease-in-out;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 2px solid transparent;
  gap: 8px;
  border-radius: 0px;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  padding: 12px 24px;
  border-color: #00677F;
  color: #FFFFFF;
  background-color: #00677F;
}

.emotion-20:hover {
  color: #FFFFFF;
  background-color: #004E64;
  border-color: #004E64;
}

.emotion-20:disabled {
  cursor: not-allowed;
  color: #FFFFFF;
  background-color: #CCE3EB;
  border-color: #CCE3EB;
}

.emotion-20:focus-visible {
  outline: 3px solid #C1C1C1;
  outline-offset: 1px;
}

@media only screen and (min-width: 600px) {
  .emotion-20 {
    width: auto;
  }
}

<div
  class="emotion-0 emotion-1"
  data-testid="modal-overlay"
  type="dark"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div
      class="emotion-4 emotion-5"
      data-testid="modal-header"
    >
      <div
        class="emotion-6 emotion-7"
        style="justify-content: space-between; flex-direction: row;"
      >
        <h4
          class="emotion-8 emotion-9"
          color="content.dark"
          data-testid="typography"
        >
          Title
        </h4>
        <i
          class="emotion-10 emotion-11"
          color="#454545"
          data-testid="close-icon"
        >
          close
        </i>
      </div>
      <h5
        class="emotion-12 emotion-9"
        color="content.default"
        data-testid="typography"
      >
        Sub Title
      </h5>
    </div>
    <div
      class="emotion-14 emotion-15"
    >
      Some text here
    </div>
    <div
      class="emotion-16 emotion-17"
    >
      <button
        class="emotion-18 emotion-19"
        color="secondary"
        data-testid="cancel-button"
        type="button"
      >
        Cancel
      </button>
      <button
        class="emotion-20 emotion-19"
        color="primary"
        data-testid="action-button"
        type="button"
      >
        Action
      </button>
    </div>
  </div>
</div>
`;
